# saiva

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  constants.py  db.py  dbinit.py  deps.py  main.py  models.py  ratelimit.py  schemas.py  security.py  taxonomy.py
backend/app/api/: __init__.py  accounts.py  admin.py  ai.py  auth.py  benchmarks.py  budgets.py  categories.py  dashboard.py  forecast.py  goals.py  households.py  imports.py  insights.py  meta.py  networth.py  notifications.py  recurring.py  reports.py  transactions.py
backend/app/services/: __init__.py  advisor.py  audit.py  benchmarks.py  budgets.py  categorise.py  crypto.py  dashboard.py  forecast.py  goals.py  importers.py  insights.py  mailer.py  merchants.py  ml.py  networth.py  notifications.py  periods.py  recurring.py  reports.py  seed.py  transfers.py  updates.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_budgets_table.py  (+5 more)
backend/tests/: conftest.py  test_accounts.py  test_admin.py  test_ai.py  test_auth.py  test_benchmarks.py  test_budgets.py  test_categorisation.py  test_categorise.py  test_dbinit.py  test_forecast.py  test_goals.py  test_import_csv.py  test_import_ofx.py  test_insights.py  test_networth.py  test_notifications.py  test_recurring.py  test_reports.py  test_settings_categories.py  test_transactions.py  test_transfers_dashboard.py  test_updates.py
(+48 files in other folders)
